--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -10,11 +10,12 @@
         android:layout_height="90dp"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_marginBottom="6dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="6dp"
-        android:contentDescription="thumbnail"
+        android:layout_marginBottom="6dp"
+        android:contentDescription="@string/thumbnail"
         android:scaleType="centerInside"
+        tools:ignore="ImageContrastCheck"
         tools:src="@mipmap/ic_launcher" />
 
     <TextView
@@ -23,8 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
+        android:layout_marginStart="0dp"
         android:layout_marginEnd="2dp"
-        android:layout_marginStart="4dp"
         android:maxLines="1"
         android:paddingEnd="4dp"
         android:textColor="#000000"
@@ -33,11 +34,12 @@
 
     <RelativeLayout
         android:id="@+id/recipe_list_text_layout"
-        android:layout_width="wrap_content"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toEndOf="@id/recipe_list_thumbnail"
-        android:layout_toStartOf="@id/recipe_list_detail">
+        android:layout_marginEnd="19dp"
+        android:layout_toStartOf="@id/recipe_list_detail"
+        android:layout_toEndOf="@id/recipe_list_thumbnail">
 
         <TextView
             android:id="@+id/recipe_list_title"
@@ -48,18 +50,18 @@
             android:textSize="18sp"
             tools:text="Title" />
 
-        <TextView
-            android:id="@+id/recipe_list_subtitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/recipe_list_title"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="2dp"
-            android:ellipsize="end"
-            android:maxLines="3"
-            android:textSize="16sp"
-            tools:text="Subtitle" />
+<!--        <TextView-->
+<!--            android:id="@+id/recipe_list_subtitle"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@+id/recipe_list_title"-->
+<!--            android:layout_marginLeft="8dp"-->
+<!--            android:layout_marginTop="2dp"-->
+<!--            android:layout_marginRight="8dp"-->
+<!--            android:ellipsize="end"-->
+<!--            android:maxLines="3"-->
+<!--            android:textSize="16sp"-->
+<!--            tools:text="Subtitle" />-->
 
     </RelativeLayout>
 </RelativeLayout>
