--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,63 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
+
     <item
         android:id="@+id/nav_home"
-        android:icon="@drawable/ic_baseline_home_24"
-        android:title="@string/home"/>
+        android:title="@string/home"
+        android:icon="@drawable/ic_baseline_home_24"/>
 
-    <item
-        android:id="@+id/nav_message"
-        android:icon="@drawable/ic_baseline_message_24"
-        android:title="@string/message"/>
-
-    <item
-        android:id="@+id/nav_sync"
-        android:title="@string/sync"
-        android:icon="@drawable/ic_baseline_sync_24"/>
-
-    <item
-        android:id="@+id/nav_trash"
-        android:title="@string/trash"
-        android:icon="@drawable/ic_baseline_delete_24"/>
-
-    <item
-        android:id="@+id/nav_setting"
-        android:title="@string/settings"
-        android:icon="@drawable/ic_baseline_settings_24"/>
-
-    <item android:title="@string/profile">
+    <item android:title="@string/categories">
 
         <menu>
 
             <item
-                android:id="@+id/nav_login"
-                android:icon="@drawable/ic_baseline_login_24"
-                android:title="@string/login"/>
+                android:id="@+id/nav_phones_and_smartphones"
+                android:icon="@drawable/ic_baseline_smartphone_24"
+                android:title="@string/smartphones_and_accessories"/>
+            <item
+                android:id="@+id/nav_mobiles"
+                android:title="@string/mobiles"/>
 
         </menu>
 
     </item>
 
-    <item android:title="@string/communicate">
-
+    <item android:title="@string/sort">
         <menu>
-
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_baseline_share_24"
-                android:title="@string/share"/>
-
-            <item
-                android:id="@+id/nav_rate_us"
-                android:icon="@drawable/ic_baseline_rate_review_24"
-                android:title="@string/rate_us"/>
+                app:actionLayout="@layout/sorting"
+                android:id="@+id/nav_radios"
+                android:title=""
+                />
 
         </menu>
-
     </item>
+
+    <item android:title="@string/filter">
+        <menu>
+            <item
+                app:actionLayout="@layout/filter"
+                android:id="@+id/filter"
+                android:title=""
+                />
+
+        </menu>
+    </item>
+
+    <!--    <item-->
+<!--        android:id="@+id/nav_sync"-->
+<!--        android:title="@string/sync"-->
+<!--        android:icon="@drawable/ic_baseline_sync_24"/>-->
+
+<!--    <item-->
+<!--        android:id="@+id/nav_trash"-->
+<!--        android:title="@string/trash"-->
+<!--        android:icon="@drawable/ic_baseline_delete_24"/>-->
+
+<!--    <item-->
+<!--        android:id="@+id/nav_setting"-->
+<!--        android:title="@string/settings"-->
+<!--        android:icon="@drawable/ic_baseline_settings_24"/>-->
+
+<!--    <item android:title="@string/profile">-->
+
+<!--        <menu>-->
+
+<!--            <item-->
+<!--                android:id="@+id/nav_login"-->
+<!--                android:icon="@drawable/ic_baseline_login_24"-->
+<!--                android:title="@string/login"/>-->
+
+<!--        </menu>-->
+
+<!--    </item>-->
+
+<!--    <item android:title="@string/communicate">-->
+
+<!--        <menu>-->
+
+<!--            <item-->
+<!--                android:id="@+id/nav_share"-->
+<!--                android:icon="@drawable/ic_baseline_share_24"-->
+<!--                android:title="@string/share"/>-->
+
+<!--            <item-->
+<!--                android:id="@+id/nav_rate_us"-->
+<!--                android:icon="@drawable/ic_baseline_rate_review_24"-->
+<!--                android:title="@string/rate_us"/>-->
+
+<!--        </menu>-->
+
+<!--    </item>-->
 
 
 </menu>
