--- a/app/src/main/res/layout/filter.xml
+++ b/app/src/main/res/layout/filter.xml
@@ -32,7 +32,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="72dp"
         android:layout_marginTop="4dp"
-        android:inputType="text"
+        android:inputType="number|numberDecimal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,7 +43,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="144dp"
         android:layout_marginTop="4dp"
-        android:inputType="text"
+        android:inputType="number|numberDecimal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
