--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<FrameLayout xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#18191A"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.drawerlayout.widget.DrawerLayout
@@ -13,17 +14,123 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <Button
-                android:id="@+id/button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="158dp"
-                android:layout_marginTop="292dp"
-                android:layout_marginEnd="159dp"
-                android:text="@string/Go"
-                app:layout_constraintEnd_toEndOf="parent"
+
+            <TextView
+                android:id="@+id/instruction1.1"
+                android:layout_width="179dp"
+                android:layout_height="26dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="36dp"
+                android:text="First you need to click"
+                android:textColor="@color/white"
+                android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/instruction1.2"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginStart="222dp"
+                android:layout_marginTop="37dp"
+                android:background="@drawable/ic_menu"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/instruction1.3"
+                android:layout_width="179dp"
+                android:layout_height="26dp"
+                android:layout_marginStart="255dp"
+                android:layout_marginTop="36dp"
+                android:text="to open side"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/instruction1.4"
+                android:layout_width="330dp"
+                android:layout_height="60dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="56dp"
+                android:text="menu where you can choose necessary category and subcategory."
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/instruction2.1"
+                android:layout_width="330dp"
+                android:layout_height="60dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="120dp"
+                android:text="After choosing the right subcategory it is possible to use search near"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/instruction2.3"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginStart="265dp"
+                android:layout_marginTop="145dp"
+                android:background="@drawable/ic_search"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/instruction2.4"
+                android:layout_width="100dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="290dp"
+                android:layout_marginTop="142dp"
+                android:text="icon or"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/instruction2.5"
+                android:layout_width="346dp"
+                android:layout_height="90dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="162dp"
+                android:text="use either sorting or filtration by price in the side menu in order to find the necessary product. You can also open product page immediately."
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/instruction3.1"
+                android:layout_width="346dp"
+                android:layout_height="90dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="265dp"
+                android:text="In the product's page you can view product's specifications or move to comparison by clicking 'PRICE COMPARING'."
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/instruction4.1"
+                android:layout_width="346dp"
+                android:layout_height="120dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="365dp"
+                android:text="In 'PRICE COMPARING' it is possible to filter price suggestions A to Z or Z to A by alphabet and low to high or high to low by price. You can also click the link and visit product's page on specific shop's website"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <com.google.android.material.navigation.NavigationView
