--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#FFFFFF">
 
     <ImageView
-        android:id="@+id/recipe_list_thumbnail"
+        android:id="@+id/product_list_symbol"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/product_list_detail"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="380dp"
+        android:layout_marginTop="40dp"
+        android:contentDescription="@string/rupee_symbol"
+        app:srcCompat="@drawable/ic_indian_rupee_symbol" />
+
+    <ImageView
+        android:id="@+id/product_list_thumbnail"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_alignParentStart="true"
@@ -19,34 +32,34 @@
         tools:src="@mipmap/ic_launcher" />
 
     <TextView
-        android:id="@+id/recipe_list_detail"
+        android:id="@+id/product_list_detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="2dp"
+        android:layout_marginStart="7dp"
+        android:layout_toEndOf="@+id/product_list_text_layout"
         android:maxLines="1"
-        android:paddingEnd="4dp"
-        android:textColor="#000000"
-        android:textSize="12sp"
+        android:textColor="#FFE900"
+        android:textSize="17sp"
+        android:textStyle="bold"
         tools:text="Detail" />
 
     <RelativeLayout
-        android:id="@+id/recipe_list_text_layout"
-        android:layout_width="240dp"
+        android:id="@+id/product_list_text_layout"
+        android:layout_width="210dp"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="19dp"
-        android:layout_toStartOf="@id/recipe_list_detail"
-        android:layout_toEndOf="@id/recipe_list_thumbnail">
+        android:layout_marginLeft="5dp"
+        android:layout_toEndOf="@id/product_list_thumbnail"
+        android:gravity="center_vertical">
 
         <TextView
-            android:id="@+id/recipe_list_title"
+            android:id="@+id/product_list_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
+            android:textColor="#000000"
             android:textSize="18sp"
             tools:text="Title" />
 
