--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
                 android:layout_height="26dp"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="36dp"
-                android:text="First you need to click"
+                android:text="@string/instruction1_1"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +43,7 @@
                 android:layout_height="26dp"
                 android:layout_marginStart="255dp"
                 android:layout_marginTop="36dp"
-                android:text="to open side"
+                android:text="@string/instruction1_3"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,7 @@
                 android:layout_height="60dp"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="56dp"
-                android:text="menu where you can choose necessary category and subcategory."
+                android:text="@string/instruction1_4"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +67,7 @@
                 android:layout_height="60dp"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="120dp"
-                android:text="After choosing the right subcategory it is possible to use search near"
+                android:text="@string/instruction2_1"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -89,7 +89,7 @@
                 android:layout_height="30dp"
                 android:layout_marginStart="290dp"
                 android:layout_marginTop="142dp"
-                android:text="icon or"
+                android:text="@string/instruction2_4"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -101,7 +101,7 @@
                 android:layout_height="90dp"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="162dp"
-                android:text="use either sorting or filtration by price in the side menu in order to find the necessary product. You can also open product page immediately."
+                android:text="@string/instruction2_5"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -113,7 +113,7 @@
                 android:layout_height="90dp"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="265dp"
-                android:text="In the product's page you can view product's specifications or move to comparison by clicking 'PRICE COMPARING'."
+                android:text="@string/instruction3_1"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -125,7 +125,7 @@
                 android:layout_height="120dp"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="365dp"
-                android:text="In 'PRICE COMPARING' it is possible to filter price suggestions A to Z or Z to A by alphabet and low to high or high to low by price. You can also click the link and visit product's page on specific shop's website"
+                android:text="@string/instruction4_1"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
