--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -42,24 +42,24 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_height="?attr/actionBarSize"
         android:layout_width="match_parent"
-        android:elevation="5dp"
-        android:background="?attr/colorPrimary" >
+        android:layout_height="?attr/actionBarSize"
+        android:background="#FF000000"
+        android:elevation="5dp">
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/toolbar_menu"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@drawable/ic_menu"/>
+            android:background="@drawable/ic_menu" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
+            android:textColor="#FFFFFF"
             android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="#FFFFFF"/>
+            android:textStyle="bold" />
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -68,24 +68,23 @@
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:src="@drawable/ic_search"
-                android:scaleType="fitCenter"
                 android:layout_gravity="end|center_vertical"
-                android:layout_marginEnd="12dp"/>
+                android:layout_marginEnd="12dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_search" />
+
             <EditText
                 android:id="@+id/toolbar_search"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:inputType="textPersonName"
                 android:hint="@string/search"
-                android:textColorHint="#99FFFFFF"
+                android:inputType="textPersonName"
                 android:textColor="#FFFFFF"
-                />
+                android:textColorHint="#99FFFFFF" />
 
         </FrameLayout>
 
 
-
     </androidx.appcompat.widget.Toolbar>
 
-</FrameLayout>
+</RelativeLayout>
