--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -5,21 +5,23 @@
     android:id="@+id/activity_product_details"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="vertical"
     android:background="@color/white"
-    tools:context=".ProductDetailsActivity">
+    android:scrollbars="vertical"
+    android:visibility="visible"
+    tools:context=".ProductDetailsActivity"
+    tools:visibility="visible">
 
     <TextView
         android:id="@+id/productName"
-        android:layout_width="407dp"
-        android:layout_height="51dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="250dp"
-        android:layout_marginEnd="137dp"
         android:gravity="center_horizontal|center_vertical"
         android:text=""
+        android:textAlignment="center"
+        android:textColor="@color/black"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,20 +35,21 @@
         android:layout_marginStart="26dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
+        android:contentDescription="@string/todo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_foreground"
-        android:contentDescription="@string/todo" />
+        app:srcCompat="@drawable/ic_launcher_foreground" />
 
     <TextView
         android:id="@+id/productRatingText"
-        android:layout_width="65dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="205dp"
-        android:layout_marginTop="10dp"
-        android:gravity="center_horizontal|center_vertical"
+        android:layout_width="50dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="204dp"
+        android:layout_marginTop="8dp"
+        android:gravity="end"
         android:text=""
+        android:textAlignment="viewEnd"
         android:textColor="@color/black"
         android:textSize="22sp"
         android:textStyle="bold"
@@ -56,23 +59,24 @@
     <ImageView
         android:id="@+id/product_list_symbol"
         android:layout_width="25dp"
-        android:layout_height="18dp"
+        android:layout_height="24dp"
         android:layout_alignParentStart="true"
         android:layout_marginStart="175dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="13dp"
         android:contentDescription="@string/rupee_symbol"
-        app:srcCompat="@drawable/ic_indian_rupee_symbol"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/productName" />
+        app:layout_constraintTop_toBottomOf="@+id/productName"
+        app:srcCompat="@drawable/ic_indian_rupee_symbol" />
 
     <TextView
         android:id="@+id/productPriceText"
         android:layout_width="99dp"
         android:layout_height="36dp"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="10dp"
-        android:gravity="center_horizontal|center_vertical"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="8dp"
+        android:gravity="end"
         android:text=""
+        android:textAlignment="viewEnd"
         android:textColor="@color/black"
         android:textSize="22sp"
         android:textStyle="bold"
@@ -82,13 +86,10 @@
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="40dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="139dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/productRatingText"
+        android:layout_height="36dp"
+        android:layout_marginStart="260dp"
+        android:layout_marginTop="6dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/productName"
         app:srcCompat="@drawable/ic_baseline_star_24" />
 
@@ -96,30 +97,29 @@
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         android:backgroundTint="#00FFFFFF"
-        android:layout_marginTop="350dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/productPriceText">
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/tab_specifications"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/specifications"/>
+            android:text="@string/specifications" />
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/tab_price_comparing"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/price_comparing"/>
+            android:text="@string/price_comparing" />
 
     </com.google.android.material.tabs.TabLayout>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="400dp"
+        android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tab_layout">
@@ -134,7 +134,7 @@
 
             <TextView
                 android:id="@+id/mainSpecifications"
-                android:layout_width="415dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
                 android:background="#C0C0C0"
@@ -142,19 +142,20 @@
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:text="@string/main_specifications"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black" />
 
             <TableRow
                 android:id="@+id/rCamera"
-                android:layout_width="409dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="1dp">
 
                 <TextView
                     android:id="@+id/rearCamera"
-                    android:layout_width="150dp"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginTop="5dp"
+                    android:layout_weight=".3658"
                     android:background="#C0C0C0"
                     android:gravity="start|center_vertical"
                     android:paddingStart="10dp"
@@ -164,9 +165,10 @@
 
                 <TextView
                     android:id="@+id/rearCameraSpecs"
-                    android:layout_width="259dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
+                    android:layout_weight=".6341"
                     android:background="#C0C0C0"
                     android:gravity="start|center_vertical"
                     android:paddingStart="10dp"
@@ -177,16 +179,17 @@
 
             <TableRow
                 android:id="@+id/fCamera"
-                android:layout_width="409dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="2dp">
 
                 <TextView
                     android:id="@+id/frontCamera"
-                    android:layout_width="150dp"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginTop="2dp"
+                    android:layout_weight=".3658"
                     android:background="#C0C0C0"
                     android:gravity="start|center_vertical"
                     android:paddingStart="10dp"
@@ -196,9 +199,10 @@
 
                 <TextView
                     android:id="@+id/frontCameraSpecs"
-                    android:layout_width="260dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
+                    android:layout_weight=".6341"
                     android:background="#C0C0C0"
                     android:gravity="start|center_vertical"
                     android:paddingStart="10dp"
@@ -209,16 +213,17 @@
 
             <TableRow
                 android:id="@+id/screenRes"
-                android:layout_width="409dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="2dp">
 
                 <TextView
                     android:id="@+id/screenResolution"
-                    android:layout_width="150dp"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginTop="2dp"
+                    android:layout_weight=".3658"
                     android:background="#C0C0C0"
                     android:gravity="start|center_vertical"
                     android:paddingStart="10dp"
@@ -228,9 +233,10 @@
 
                 <TextView
                     android:id="@+id/screenResolutionSpecs"
-                    android:layout_width="260dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
+                    android:layout_weight=".6341"
                     android:background="#C0C0C0"
                     android:gravity="start|center_vertical"
                     android:paddingStart="10dp"
@@ -241,16 +247,17 @@
 
             <TableRow
                 android:id="@+id/screenS"
-                android:layout_width="409dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="2dp">
 
                 <TextView
                     android:id="@+id/screenSize"
-                    android:layout_width="150dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
+                    android:layout_weight=".3658"
                     android:background="#C0C0C0"
                     android:gravity="start|center_vertical"
                     android:paddingStart="10dp"
@@ -260,9 +267,10 @@
 
                 <TextView
                     android:id="@+id/screenSizeSpecs"
-                    android:layout_width="260dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
+                    android:layout_weight=".6341"
                     android:background="#C0C0C0"
                     android:gravity="start|center_vertical"
                     android:paddingStart="10dp"
@@ -273,16 +281,17 @@
 
             <TableRow
                 android:id="@+id/proc"
-                android:layout_width="409dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="2dp">
 
                 <TextView
                     android:id="@+id/processor"
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:layout_marginTop="2dp"
+                    android:layout_weight=".3658"
                     android:background="#C0C0C0"
                     android:gravity="start|center_vertical"
                     android:paddingStart="10dp"
@@ -292,9 +301,10 @@
 
                 <TextView
                     android:id="@+id/processorSpecs"
-                    android:layout_width="260dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
+                    android:layout_weight=".6341"
                     android:background="#C0C0C0"
                     android:gravity="start|center_vertical"
                     android:paddingStart="10dp"
@@ -305,16 +315,17 @@
 
             <TableRow
                 android:id="@+id/inMemory"
-                android:layout_width="409dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="2dp">
 
                 <TextView
                     android:id="@+id/internalMemory"
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:layout_marginTop="2dp"
+                    android:layout_weight=".3658"
                     android:background="#C0C0C0"
                     android:gravity="start|center_vertical"
                     android:paddingStart="10dp"
@@ -324,9 +335,10 @@
 
                 <TextView
                     android:id="@+id/internalMemorySpecs"
-                    android:layout_width="260dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
+                    android:layout_weight=".6341"
                     android:background="#C0C0C0"
                     android:gravity="start|center_vertical"
                     android:paddingStart="10dp"
@@ -337,16 +349,17 @@
 
             <TableRow
                 android:id="@+id/RAM"
-                android:layout_width="409dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="2dp">
 
                 <TextView
                     android:id="@+id/ram"
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:layout_marginTop="2dp"
+                    android:layout_weight=".3658"
                     android:background="#C0C0C0"
                     android:gravity="start|center_vertical"
                     android:paddingStart="10dp"
@@ -356,9 +369,10 @@
 
                 <TextView
                     android:id="@+id/ramSpecs"
-                    android:layout_width="260dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
+                    android:layout_weight=".6341"
                     android:background="#C0C0C0"
                     android:gravity="start|center_vertical"
                     android:paddingStart="10dp"
@@ -368,16 +382,17 @@
             </TableRow>
 
             <TableRow
-                android:layout_width="409dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="2dp">
 
                 <TextView
                     android:id="@+id/battery"
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:layout_marginTop="2dp"
+                    android:layout_weight=".3658"
                     android:background="#C0C0C0"
                     android:gravity="start|center_vertical"
                     android:paddingStart="10dp"
@@ -387,9 +402,10 @@
 
                 <TextView
                     android:id="@+id/batterySpecs"
-                    android:layout_width="260dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
+                    android:layout_weight=".6341"
                     android:background="#C0C0C0"
                     android:gravity="start|center_vertical"
                     android:paddingStart="10dp"
@@ -414,7 +430,7 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <RadioGroup
                 android:id="@+id/radio_group"
@@ -453,11 +469,12 @@
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <LinearLayout
                 android:id="@+id/price_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"/>
+                android:orientation="vertical" />
         </androidx.core.widget.NestedScrollView>
 
     </LinearLayout>
