--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,67 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFFFFF">
-
-    <ImageView
-        android:id="@+id/product_list_symbol"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/product_list_detail"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="380dp"
-        android:layout_marginTop="40dp"
-        android:contentDescription="@string/rupee_symbol"
-        app:srcCompat="@drawable/ic_indian_rupee_symbol" />
+    android:layout_height="wrap_content"
+    android:background="@color/white">
 
     <ImageView
         android:id="@+id/product_list_thumbnail"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
+        android:layout_alignParentTop="true"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginBottom="6dp"
         android:contentDescription="@string/thumbnail"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:scaleType="centerInside"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_smartphone_24"
         tools:ignore="ImageContrastCheck"
-        tools:src="@mipmap/ic_launcher" />
+        tools:src="@mipmap/ic_launcher"
+        tools:srcCompat="@drawable/ic_baseline_smartphone_24" />
+
+    <TextView
+        android:id="@+id/product_list_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/product_list_thumbnail"
+        android:layout_alignParentStart="true"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/product_list_detail"
+        app:layout_constraintHorizontal_bias="0.318"
+        app:layout_constraintStart_toEndOf="@+id/product_list_thumbnail"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent=".4414"
+        tools:text="Title" />
 
     <TextView
         android:id="@+id/product_list_detail"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginStart="7dp"
-        android:layout_toEndOf="@+id/product_list_text_layout"
+        android:layout_marginEnd="8dp"
+        android:layout_toEndOf="@+id/product_list_thumbnail"
         android:maxLines="1"
-        android:textColor="#FFE900"
+        android:textAlignment="textEnd"
+        android:textColor="#FFCC00"
         android:textSize="17sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/product_list_symbol"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.507"
+        app:layout_constraintWidth_percent=".1487"
         tools:text="Detail" />
 
-    <RelativeLayout
-        android:id="@+id/product_list_text_layout"
-        android:layout_width="210dp"
+    <ImageView
+        android:id="@+id/product_list_symbol"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="5dp"
-        android:layout_toEndOf="@id/product_list_thumbnail"
-        android:gravity="center_vertical">
-
-        <TextView
-            android:id="@+id/product_list_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:textColor="#000000"
-            android:textSize="18sp"
-            tools:text="Title" />
-
-    </RelativeLayout>
-</RelativeLayout>
+        android:layout_alignTop="@+id/product_list_thumbnail"
+        android:layout_alignParentStart="true"
+        android:layout_marginEnd="28dp"
+        android:contentDescription="@string/rupee_symbol"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.507"
+        app:srcCompat="@drawable/ic_indian_rupee_symbol" />
+</androidx.constraintlayout.widget.ConstraintLayout>
